<resources>
    <string name="app_name">Grocery Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="offers" />
    <string name="offer">Offers</string>
    <string name="new_product">New Products</string>
    <string name="my_order">My Orders</string>
    <string name="pro">Profile</string>
    <string name="categorys">Category</string>
    <string name="my_cart">My Cart</string>
    <string name="description">welcome to our app buy best viggies and fruits in the town grown with care and love and by organic farming...with great discounts</string>
</resources>