<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.grocerystore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@string/menu_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.grocerystore.ui.profile.ProfileFragment"
        android:label= "@string/pro"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.grocerystore.ui.category.CategoryFragment"
        android:label="@string/categorys"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.grocerystore.OffersFragment"
        android:label="@string/offer"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.grocerystore.NewProductsFragment"
        android:label="@string/new_product"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.grocerystore.MyOrdersFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.grocerystore.MyCartsFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_carts" />
</navigation>